--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="1591266208678.jpeg" alt="My image">
+    <h1>My Name</h1>
+    <a href="https://www.linkedin.com/in/rahul-agnihotri-9a2740181/">My LinkedIn Profile</a>
+    <section id="skills">
+      <h2>Skills</h2>
+      <p>List your skills here</p>
+    </section>
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li>Project 1</li>
+        <li>Project 2</li>
+        <li>Project 3</li>
+      </ul>
+    </section>
     <script type="text/javascript" src="./script.js">
 </script>
 
